--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <spring-data-jpa.version>1.11.1.RELEASE</spring-data-jpa.version>
         <jackson.version>2.4.4</jackson.version>
         <springsecurity.version>4.2.2.RELEASE</springsecurity.version>
+        <cucumber.version>1.2.4</cucumber.version>
         <skipTests>false</skipTests>
         <skipITs>${skipTests}</skipITs>
         <skipUTs>${skipTests}</skipUTs>
@@ -201,6 +202,24 @@
                 <artifactId>log4j-over-slf4j</artifactId>
                 <version>1.7.25</version>
             </dependency>
+            <dependency>
+              <groupId>info.cukes</groupId>
+              <artifactId>cucumber-junit</artifactId>
+              <version>${cucumber.version}</version>
+              <scope>test</scope>
+            </dependency>
+            <dependency>
+              <groupId>info.cukes</groupId>
+              <artifactId>cucumber-java8</artifactId>
+              <version>${cucumber.version}</version>
+              <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>2.44.0</version>
+                <scope>test</scope>
+            </dependency>            
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -338,6 +357,20 @@
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
         </dependency>
+        <dependency>
+          <groupId>info.cukes</groupId>
+          <artifactId>cucumber-junit</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>info.cukes</groupId>
+          <artifactId>cucumber-java8</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+        </dependency>        
     </dependencies>
     <build>
         <plugins>
@@ -386,6 +419,9 @@
                 <version>2.18.1</version>
                 <configuration>
                     <skipTests>${skipUTs}</skipTests>
+                    <includes>
+                        <exclude>**/*BDDTest.java</exclude>
+                    </includes>
                 </configuration>
             </plugin>
             <!--<plugin>
@@ -454,6 +490,28 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>net.masterthought</groupId>
+                <artifactId>maven-cucumber-reporting</artifactId>
+                <version>2.0.0</version>
+                <executions>
+                  <execution>
+                    <id>execution</id>
+                    <phase>verify</phase>
+                    <goals>
+                      <goal>generate</goal>
+                    </goals>
+                    <configuration>
+                      <projectName>grocerystore-1.0</projectName>
+                      <outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
+                      <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
+                      <skippedFails>true</skippedFails>
+                      <enableFlashCharts>false</enableFlashCharts>
+                      <buildNumber>42</buildNumber>
+                    </configuration>
+                  </execution>
+                </executions>
+              </plugin>            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
