--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,12 @@
                 <artifactId>selenium-java</artifactId>
                 <version>2.44.0</version>
                 <scope>test</scope>
-            </dependency>            
+            </dependency>     
+            <dependency>
+              <groupId>net.sf.ehcache</groupId>
+              <artifactId>ehcache</artifactId>
+              <version>2.10.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -357,6 +362,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
         </dependency>
+        <dependency>
+             <groupId>net.sf.ehcache</groupId>
+             <artifactId>ehcache</artifactId>
+             <scope>test</scope>
+        </dependency>        
     </dependencies>
     <build>
         <plugins>
