--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
                 <version>${logback.version}</version>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>1.7.20</version>
+            </dependency>
             <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -65,6 +70,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
+                <exclusions>
+            	  <exclusion>
+            		<groupId>commons-logging</groupId>
+            		<artifactId>commons-logging</artifactId>
+            	  </exclusion>
+            	</exclusions>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
             <dependency>
@@ -143,6 +154,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.web.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -151,12 +168,6 @@
                 <scope>test</scope>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-validator</artifactId>
-                <version>5.1.3.Final</version>
-                <scope>test</scope>
-            </dependency>
             <!-- https://mvnrepository.com/artifact/jstl/jstl -->
             <dependency>
                 <groupId>jstl</groupId>
@@ -248,6 +259,10 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -317,13 +332,6 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>5.1.3.Final</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/jstl/jstl -->
@@ -403,55 +411,14 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
-            <plugin>
-                <groupId>com.heroku.sdk</groupId>
-                <artifactId>heroku-maven-plugin</artifactId>
-                <version>1.1.3</version>
-                <configuration>
-                    <appName>grocerystore-1.0</appName>
-                    <processTypes>
-                        <web>java $JAVA_OPTS -cp 'target/dependency/*' webapp.runner.launch.Main target/*.war
-                            --enable-naming --port $PORT
-                        </web>
-                    </processTypes>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
                     <skipTests>${skipUTs}</skipTests>
-                    <includes>
-                        <exclude>**/*BDDTest.java</exclude>
-                    </includes>
                 </configuration>
             </plugin>
-            <!--<plugin>
-                <groupId>de.juplo</groupId>
-                <artifactId>hibernate4-maven-plugin</artifactId>
-                <version>1.1.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>export</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                     <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <envers>true</envers>
-                    <format>true</format>
-                    <delimiter>;</delimiter>
-                    <force>true</force>
-                    <type>CREATE</type>
-                    <target>SCRIPT</target>
-                    <hibernateDialect>org.hibernate.dialect.PostgreSQL9Dialect</hibernateDialect>
-                    <outputFile>${project.build.directory}/hsql-schema.sql.</outputFile>
-                </configuration>
-            </plugin> -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
