--- a/src/main/resources/config/db/h2/hsql.properties
+++ b/src/main/resources/config/db/h2/hsql.properties
@@ -12,6 +12,6 @@ hsql.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 hsql.jpa.database=HSQL
 
-hsql.jpa.showSql=false
+hsql.jpa.showSql=true
 
 hsql.jpa.generateDdl=false
